# finanzas-pipeline

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
data/: cuentas_conocidas.example.json
sql/: 001_schema.sql  002_seed_categorias.sql  003_migracion_nu.sql  004_schema_nu.sql
src/: categorizador.py  config_cuentas.py  db.py  explorar_pdf.py  extractor.py  extractor_nu.py  main.py  ocr.py  schema.py  validador.py
src/extractors/: __init__.py  nu.py  santander.py
tests/: analisis_drenaje_cajitas.py  analisis_flujo.py  analisis_nivel1_consolidado.py  analisis_recurrencia.py  cargar_db.py  cargar_db_nu.py  cargar_transacciones_nu.py  debug_ciudaddemex.py  debug_layout.py  debug_mayo_2026.py  diagnostico_reconciliacion_nu.py  explorar_transacciones.py  probar_categorizacion.py  probar_extractor_nu.py  probar_nu.py  probar_ocr.py  sanidad_flujo_consolidado.py
