[project]
name = "finanzas-personales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ocrmac>=1.0.1",
    "pandas>=2.2,<3.0",
    "pandera>=0.32.1",
    "pdfplumber>=0.11.10",
    "psycopg[binary]>=3.3.4",
    "pyarrow>=24.0.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.14.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

